# PX4-mini-drone

./: .gitignore  LICENSE  MicroXRCE.sh  README.md  README_old.md  Set_cmake.md  config.json  create_pakage.md  environment_setup.sh  hitl_environment_setup.sh  my_world.world  my_world_2.world  plots.m  run.sh  sitl_environment_setup.sh  tollchain_installation.md  uwb.py  uwb_environment_setup.sh  uwb_test.sh
CAD/: airframe_kakute_h7.ipt  airframe_pixhawk_4mini.ipt  carrello.ipt  pixhawk+carrello.iam  supporto_marker.ipt  supporto_mb1202.ipt  supporto_rasp.ipt
LogPixhawk/: log_160_2023-4-12-17-21-44.ulg  log_161_2023-4-12-17-53-30.ulg  log_162_2023-4-12-17-55-54.ulg  log_163_2023-4-12-19-09-04.ulg  log_164_2023-4-12-19-13-08.ulg  log_165_2023-4-12-19-25-08---first_flight.ulg  log_166_2023-4-12-19-35-12.ulg  log_188_2023-4-17-09-07-58.ulg  log_189_2023-4-17-09-21-16.ulg  log_193_2023-5-22-13-58-44---hitl.ulg
LogPixhawk/21122023/: log_0_2023-12-12-00-33-40.ulg  log_10_2023-12-12-03-47-28.ulg  log_11_2023-12-12-03-48-24.ulg  log_12_2023-12-12-03-49-10.ulg  log_13_2023-12-12-03-50-12.ulg  log_14_2023-12-12-03-53-44.ulg  log_15_2023-12-12-03-56-10.ulg  log_16_2023-12-12-04-10-20.ulg  log_17_2023-12-12-04-12-54.ulg  log_18_2023-12-12-04-27-14.ulg  log_19_2023-12-12-04-28-40.ulg  log_1_2023-12-12-00-34-56.ulg  log_20_2023-12-12-04-32-52.ulg  log_21_2023-12-12-04-34-20.ulg  log_22_2023-12-12-05-02-16.ulg  log_23_2023-12-12-05-03-44.ulg  log_24_2023-12-12-05-04-38.ulg  log_25_2023-12-12-05-08-40.ulg  log_26_2023-12-12-05-10-20.ulg  log_27_2023-12-12-05-11-22.ulg  log_28_2023-12-12-05-13-42.ulg  log_29_2023-12-12-05-20-30.ulg  log_2_2023-12-12-02-27-24.ulg  log_30_2023-12-12-05-36-46.ulg  log_31_2023-12-12-05-44-28.ulg  log_32_2023-12-12-05-46-30.ulg  log_33_2023-12-12-05-47-44.ulg  log_34_2023-12-12-05-48-20.ulg  log_35_2023-12-12-05-48-58.ulg  log_36_2023-12-12-05-51-38.ulg  log_37_2023-12-12-05-56-28.ulg  log_38_2023-12-12-06-03-26.ulg  log_39_2023-12-12-06-04-42.ulg  log_3_2023-12-12-02-32-12.ulg  log_40_2023-12-12-06-13-06.ulg  log_4_2023-12-12-02-38-52.ulg  log_5_2023-12-12-03-19-04.ulg  log_6_2023-12-12-03-24-48.ulg  log_7_2023-12-12-03-34-58.ulg  log_8_2023-12-12-03-36-06.ulg  (+1 more)
LogPixhawk/22122023/: log_0_2023-12-12-21-36-22.ulg  log_1_2023-12-12-21-37-54.ulg  log_2_2023-12-12-21-42-36.ulg  log_3_2023-12-12-21-50-24.ulg  log_4_2023-12-12-21-53-58.ulg  log_5_2023-12-12-22-00-12.ulg  log_6_2023-12-12-22-11-16.ulg  log_7_2023-12-12-22-30-52.ulg
QGround_parameters/: HITL_gps.params  HITL_indoor_simu.params  MOCAP.params  MOCAP_new_2112.params  SITL_indoor_simu.params  SITL_outdoor_simu.params  outdoor_test.params
bridge/: CMakeLists.txt  mocap_bridge.cpp  package.xml
bridge_mb1202_px4/: package.xml  setup.cfg  setup.py
bridge_mb1202_px4/bridge_mb1202_px4/: mb_1202_bridge.py
bridge_mocap_px4/: CMakeLists.txt
bridge_mocap_px4/src/: mocap_bridge.cpp
bridge_uwb_px4/: CMakeLists.txt  lazy_server.py  package.xml  setup.cfg  setup.py  test.py
bridge_uwb_px4/bridge_uwb_px4/: bridge_uwb_sitl.py  mb_1202_bridge.py  uwb_bridge.py
bridge_uwb_px4/src/: rtdoa.py
data_from_sensor/: dati_read_sensor_6.csv  dati_read_sensor_7.csv  read_data.m
data_from_sensor_plot/: read_data.m
docs/: build.md  companion_board.md  create_pakage.md  gps_simu.md  hitl.md  mocap_simu.md  plugins.md  sensors.md  sitl.md  toolchain_installation.md  uwb_simu.md
gps/gps_cpp/: CMakeLists.txt  package.xml  run_point.sh  run_vel.sh
gps/gps_py/: run_point.sh  run_vel.sh  (+2 more)
latex_project/: IEEEexample.bib  main.tex
launch/: mocap_offboard.launch.py  offboard.launch.py  uwb_offboard.launch.py
matlab_log_plot/: plot_data.m  plot_data_exp.m  plot_data_mb1202.m  plot_data_sitl.m  read_data_collected_in_lab.m  set_value.m
mocap/: package.xml  run_mocap.sh  setup.cfg  setup.py
offboard_cpp/: CMakeLists.txt  package.xml
offboard_cpp/src/: offboard_example.cpp  offboard_flight.cpp
offboard_py/: setup.cfg  setup.py
point_list/: run_pos.sh  run_vel.sh
point_list/point_list_cpp/: CMakeLists.txt  package.xml  run.sh  run_point.sh
point_list/point_list_cpp/src/: offboard_point_ctrl.cpp  offboard_point_list copy.cpp  offboard_point_list.cpp  offboard_velocity_ctrl.cpp
scripts/: run_microros.sh  run_offboard_control.sh  run_offboard_flight.sh  run_px4.sh  run_qground.sh
uwb/: package.xml  setup.cfg  setup.py
world/: my_world.world
(+55 files in other folders)
